<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task2b">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/iv_register"
            android:layout_width="104dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="153dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="154dp"
            android:gravity="center"
            android:text="LOGIN"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="53dp" />

        <EditText
            android:id="@+id/ed_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_register"
            android:layout_alignParentStart="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Fullname"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_fullname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="102dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="text"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="102dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="text"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="102dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/ed_username"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ed_con_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="102dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/ed_password"
            android:hint="@string/Confirm_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_con_password"
            android:layout_alignParentStart="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="15dp"
            android:text="@string/Register" />



    </RelativeLayout>

</RelativeLayout>